--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="contenedor">
         <div class="col-md-6">
             <div class="h-100 p-5 text-bg-dark rounded-3">
-              <h2>¿Que esperas para construir tu sueño?</h2>
+              <h2>¿Qué esperas para construir tu sueño?</h2>
               <p>¿Quiénes somos?
                 Somos una empresa abocada al rubro de la construcción en general (steel framing , construcción tradicional ). Una empresa joven con ideales modernos y eficientes al momento de construir tu sueño..</p>
               <button class="btn btn-outline-light" type="button" style="text-decoration: none; color: white;">
