--- a/nuestrosproyectos.html
+++ b/nuestrosproyectos.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Vivienda</h5>
                   <p class="card-text">
-                    La misma cuenta con 4 habitaciones,4 baños,cocina,comedor,quincho con parrilla .
+                    La misma cuenta con 4 habitaciones, 4 baños, cocina, comedor, quincho con parrilla, lavadero, entre otras cosas.
                           <br>
                           lavadero,entre otras cosas.
                   </p>
@@ -48,9 +48,9 @@
                 <div class="card-body">
                   <h5 class="card-title">Vivienda</h5>
                   <p class="card-text">
-                    La misma cuenta con 3 habitaciones,2 baños,cocina,comedor,quincho con parrilla .
+                   Cuenta con 3 habitaciones, 2 baños, cocina, comedor, quincho con parrilla, 
                     <br>
-                    lavadero,entre otras cosas..
+                      lavadero, entre otras cosas .
                 </p>
                   <a href="proyecto2.html" class="btn btn-primary">Echa un vistazo</a>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Reforma</h5>
                   <p class="card-text">
-                   La misma conto con la reforma de un baño , la constrcuccion de una habitacion y la construccion de una losa
+                   Se realizó la reforma del un baño y la constrcucción de una habitación y una losa.
                    <br>
                     <br>
                    </p>
@@ -75,7 +75,7 @@
                 <img src="img/ultima foto.jfif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Vivienda</h5>
-                  <p class="card-text">La misma cuenta con 3 habitaciones,3 baños,cocina,comedor,quincho con parrilla .
+                  <p class="card-text">Cuenta con 3 habitaciones, 3 baños, cocina, comedor, quincho con parrilla, lavadero, entre otras cosas.
                     <br>
                     lavadero,entre otras cosas...</p>
                   <a href="cuarto.html" class="btn btn-primary">Echa un vistazo</a>
