--- a/nosotros.html
+++ b/nosotros.html
@@ -30,11 +30,11 @@
     <div class="contenedor">
         <div class="contendor-listas">
             <div class="contenedor-titulo">
-                <h1>¿Que incluimos?</h1>
+                <h1>¿Qué incluimos?</h1>
             </div>
             <div class="listas-lista-A">
                 <div class="contenedor-subtitulo">
-                    <h4>En terminos administrativos..</h4>
+                    <h4>En términos administrativos...</h4>
                 </div>
                 <ul>
                     <li>Croquis</li>
@@ -50,7 +50,7 @@
             </div>
             <div class="lista-B">
                 <div class="lista-B-titulo">
-                    <h4>En terminos constructivos..</h4>
+                    <h4>En términos constructivos...</h4>
                 </div>
                 <ul>
                     <li>Cimientos</li>
