--- a/nuestrosproyectos.html
+++ b/nuestrosproyectos.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Vivienda</h5>
                   <p class="card-text">
-                    La misma cuenta con 4 habitaciones, 4 baños, cocina, comedor, quincho con parrilla, lavadero, entre otras cosas.
+                    La misma cuenta con 4 habitaciones, 4 baños, cocina, comedor, quincho con parrilla,
                           <br>
                           lavadero,entre otras cosas.
                   </p>
